--- a/ecommerce-client/package.json
+++ b/ecommerce-client/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "8.16.2",
-    "npm": "6.4.1"
+    "node": "14.x",
+    "npm": "7.x"
   },
   "dependencies": {
     "axios": "^0.19.0",
